--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 name                     : &name "Zhaoyu Li"
 description              : &description "personal description"
 url                      : https://blitzwrecker.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/W25-CMPUT-412" # the subpath of your site, e.g. "/blog"
 repository               : "BlitzWrecker/W25-CMPUT-412"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
