--- a/Exercise_3/packages/computer_vision/package.xml
+++ b/Exercise_3/packages/computer_vision/package.xml
@@ -1,11 +1,17 @@
 <package>
   <name>computer_vision</name>
-  <version>0.1.0</version>
+  <version>0.0.1</version>
   <description>
-  This package contains the code for solving basic computer vision tasks.
+  My first Catkin package in Duckietown.
   </description>
-  <maintainer email="ddikshan@ualberta.ca">Dikshant</maintainer>
+  <maintainer email="zhaoyu5@ualberta.ca">Anthony Chen</maintainer>
   <license>None</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <run_depend>message_runtime</run_depend>
+  <run_depend>rospy</run_depend>
+  <run_depend>std_msgs</run_depend>
 </package>
