--- a/Exercise_Final/packages/ex4/package.xml
+++ b/Exercise_Final/packages/ex4/package.xml
@@ -1,5 +1,5 @@
 <package>
-  <name>ex4</name>
+  <name>final</name>
   <version>0.0.1</version>
   <description>
   My first Catkin package in Duckietown.
